--- a/.codenvy/project.json
+++ b/.codenvy/project.json
@@ -1,1 +1,1 @@
-{"runners":{"configs":{"recommend":{"ram":256,"variables":{},"options":{}}},"default":"system:/java/web/tomcat7"},"builders":{"configs":{},"default":"maven"},"mixinTypes":[],"type":"maven","attributes":{"languageVersion":["1.6"],"language":["java"]}}
+{"runners":{"configs":{"recommend":{"ram":256,"variables":{},"options":{}}},"default":"system:/java/web/tomcat7"},"builders":{"configs":{},"default":"maven"},"mixinTypes":["contribution"],"type":"maven","attributes":{"contribute_branch":["master"],"languageVersion":["1.6"],"contribute_mode":["contribute"],"language":["java"]}}
